# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "cda-extra"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Optional extras for the Eclipse OpenSOVD CDA"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-health = { workspace = true, optional = true }
cda-interfaces = { workspace = true, optional = true }

# external
sd-notify = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time"], optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
systemd-notify = [
  "dep:sd-notify",
  "dep:cda-health",
  "dep:cda-interfaces",
  "dep:tokio",
  "dep:tracing",
]
