# Copyright (c) 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-health"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Provides a health check interface"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-tracing = { workspace = true }
cda-interfaces = { workspace = true }

# external
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
# tokio
tokio = { workspace = true, features = ["sync"] }
# logging
tracing = { workspace = true }

# web server
axum = { workspace = true, features = [
    "http1",
    "json",
    "tokio",
    "query",
    "matched-path",
    "original-uri",
] }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
    "trace",
] }

aide = { workspace = true, features = [
    "axum",
    "swagger",
    "http",
    "axum-extra",
    "axum-json",
    "axum-matched-path",
    "axum-original-uri",
    "axum-query",
    "axum-extra-headers",
    "axum-extra-with-rejection",
    "macros",
    "serde_qs",
] }
chrono = { workspace = true }

[features]
default = []
tokio-tracing = ["tokio/tracing"]
dlt-tracing = ["cda-interfaces/dlt-tracing"]
