# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-interfaces"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Interfaces and Types used in CDA"
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hashbrown = { version = "0.15", features = ["serde"] }
parking_lot = "0.12.3"
schemars = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#tokio
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
# runtime size info
deepsize = { version = "0.2.0", features = ["hashbrown"], optional = true }
hex = "0.4.3"
strum = "0.27.2"
strum_macros = "0.27.2"

[features]
default = []
deepsize = ["dep:deepsize"]
tokio-tracing = ["tokio/tracing"]
