# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-interfaces"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Interfaces and Types used in CDA"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# internal dependencies
cda-tracing = { workspace = true }

hashbrown = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
#tokio
tokio = { workspace = true, features = ["sync"] }
# runtime size info
deepsize = { workspace = true, features = ["hashbrown"], optional = true }
hex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
# logging
tracing = { workspace = true }

[features]
default = []
deepsize = ["dep:deepsize"]
tokio-tracing = ["tokio/tracing"]
