# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "opensovd-cda"
version = "0.1.0"
edition = "2024"
publish = false
description = "Eclipse OpenSOVD CDA - A modern open source Classic Diagnostic Adapter written in Rust"
homepage = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter"
license = "Apache-2.0"

[[bin]]
name = "opensovd-cda"
path = "src/main.rs"

[lib]
name = "opensovd_cda_lib"
path = "src/lib.rs"

[dependencies]
cda-core = { path = "../cda-core" }
cda-comm-doip = { path = "../cda-comm-doip" }
cda-comm-uds = { path = "../cda-comm-uds" }
cda-database = { path = "../cda-database" }
cda-interfaces = { path = "../cda-interfaces" }
cda-sovd = { path = "../cda-sovd" }
cda-tracing = { path = "../cda-tracing" }
# args
clap = { version = "4.5", features = ["derive"] }
# config
figment = { version = "0.10.19", default-features = false, features = [
  "env",
  "toml",
] }
futures = { version = "0.3" }
hashbrown = { version = "0.15", features = ["serde"] }
# allocator
mimalloc = { git = "https://github.com/theswiftfox/mimalloc.git", rev = "7a6f28b" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43.0", features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "time",
  "signal",
] }
# logging & tracing
log = "0.4"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "ansi",
  "chrono",
  "env-filter",
  "fmt",
  "json",
  "parking_lot",
  "std",
  "tracing-log",
] }
strip-ansi-escapes = "0.2.1" # Strip ANSI escape codes from strings, used for file logging
nu-ansi-term = "0.50" # ANSI terminal support for terminal log output

[dev-dependencies]
chrono = "0.4.40"
ctor = "0.1.23"
http = "1.3.1"
mime = "0.3.17"
reqwest = "0.12.22"
serde_json = "1.0"

[features]
default = []
tokio-tracing = ["cda-interfaces/tokio-tracing", "cda-tracing/tokio-tracing"]
