# SPDX-FileCopyrightText: 2026 Copyright (c) Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-plugin-deferred-init"
version = "0.1.0"
edition.workspace = true
publish = false
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cda-interfaces = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[features]
default = []
test-utils = []
