# SPDX-FileCopyrightText: 2026 Copyright (c) Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cda-plugin-runtime-update"
version = "0.1.0"
edition.workspace = true
publish = false
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cda-interfaces = { workspace = true }
cda-database = { workspace = true }
cda-plugin-security = { workspace = true }
cda-sovd = { workspace = true }
cda-storage = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sovd-interfaces = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros", "fs"] }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
schemars = { workspace = true }

[dev-dependencies]
cda-database = { workspace = true, features = ["database-builder"] }
tempfile = { workspace = true }
