# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

# cda-plugin-security: Security plugin APIs for authentication and ECU security access.

load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "cda-plugin-security",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "cda_plugin_security",
    edition = "2024",
    deps = [
        "//cda-database",
        "//cda-interfaces",
        "//cda-sovd-interfaces:sovd-interfaces",
        "@crate_index//:aide",
        "@crate_index//:axum",
        "@crate_index//:axum-extra",
        "@crate_index//:http",
        "@crate_index//:jsonwebtoken",
        "@crate_index//:schemars",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:thiserror",
        "@crate_index//:tracing",
    ],
    proc_macro_deps = [
        "@crate_index//:async-trait",
    ],
)
