# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

# cda-plugin-security: Security plugin APIs for authentication and ECU security access.

load("//:bazel/rust_crate.bzl", "workspace_rust_library")

package(default_visibility = ["//visibility:public"])

workspace_rust_library(
    name = "cda-plugin-security",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "cda_plugin_security",
    local_deps = [
        "//cda-database",
        "//cda-interfaces",
        "//cda-sovd-interfaces:sovd-interfaces",
    ],
)
