# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

# sovd-interfaces: Data models and trait definitions for SOVD API resources.

load("//:bazel/rust_crate.bzl", "workspace_rust_library")

package(default_visibility = ["//visibility:public"])

workspace_rust_library(
    name = "sovd-interfaces",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "sovd_interfaces",
    local_deps = ["//cda-interfaces"],
)
