# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sovd-interfaces"
version = "0.1.0"
edition.workspace = true
publish = false
description = "SOVD webserver used in CDA"
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# external dependencies
hashbrown = { version = "0.15", features = ["serde"] }
chrono = "0.4.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { git = "https://github.com/theswiftfox/schemars.git", rev = "d264067", optional = true, features = [
  "hashbrown",
] }

[features]
default = []
openapi = ["dep:schemars"]
auth = []
