# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sovd-interfaces"
version = "0.1.0"
edition.workspace = true
publish = false
description = "SOVD webserver used in CDA"
homepage.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# external dependencies
hashbrown = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["hashbrown"] }
strum = { workspace = true, features = ["derive"] }

[features]
default = []
auth = []
